# s3-image-dataset-kit

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  justfile  pyproject.toml
schema/: inventory-v1.schema.json
src/dataset_tool/: client.py  config.py  hashutil.py  manifest.py  s3_client.py  uploader.py
src/dataset_tool/scripts/: build_manifest.py  random_fetch.py  upload_dataset.py  validate_manifest.py
tests/: conftest.py  test_uploader.py
